<resources>
    <string name="app_name">DownloadStationViewer</string>
    <string name="titleLogin">Se connecter</string>
    <string name="addressServer">Adresse du serveur + port</string>
    <string name="password">Mot de passe</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="by">par</string>
    <string name="slash">/</string>
    <string name="refreched">Liste mise à jour</string>
    <string name="pause">Pause</string>
    <string name="play">Relancer</string>
    <string name="percentUnit">%</string>
    <string name="delete">Supprimer</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="refresh">Rafraichir</string>
    <string name="Downloading">Téléchargement</string>
    <string name="Seeding">Seeding</string>
    <string name="Finished">Terminé</string>
    <string name="Pause">Pause</string>
    <string name="emptyList">La liste est vide</string>
</resources>